Bug fixes + better image view on mobile

--- a/src/components/vues/DMConversation/DMConversation.module.scss
+++ b/src/components/vues/DMConversation/DMConversation.module.scss
@@ -56,6 +56,10 @@ $drawer_width:240px;
 
   &:hover {
     background-color: #e2e2ff !important;
+
+    :global .dark :local & {
+      background-color: #5c5c85 !important;
+    }
   }
 }
 .get_back_paper {
